--- a/swadeshproject/package.json
+++ b/swadeshproject/package.json
@@ -7,10 +7,12 @@
     "ios": "react-native run-ios",
     "start": "react-native start",
     "test": "jest",
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "prettier": "prettier --write \"{,!(node_modules)/**/}*.js\""
   },
   "dependencies": {
     "@react-navigation/native": "^6.0.12",
+    "@react-navigation/native-stack": "^6.8.0",
     "react": "18.1.0",
     "react-native": "0.70.0",
     "react-native-safe-area-context": "^4.3.3",
@@ -19,11 +21,12 @@
   "devDependencies": {
     "@babel/core": "^7.12.9",
     "@babel/runtime": "^7.12.5",
-    "@react-native-community/eslint-config": "^2.0.0",
+    "@react-native-community/eslint-config": "^3.1.0",
     "babel-jest": "^26.6.3",
-    "eslint": "^7.32.0",
+    "eslint": "^8.23.1",
     "jest": "^26.6.3",
     "metro-react-native-babel-preset": "^0.72.1",
+    "prettier": "^2.7.1",
     "react-test-renderer": "18.1.0"
   },
   "jest": {
