--- a/swadeshproject/package.json
+++ b/swadeshproject/package.json
@@ -15,6 +15,7 @@
     "@react-navigation/native-stack": "^6.8.0",
     "react": "18.1.0",
     "react-native": "0.70.0",
+    "react-native-image-crop-picker": "^0.38.0",
     "react-native-safe-area-context": "^4.3.3",
     "react-native-screens": "^3.17.0"
   },
