--- a/swadeshproject/package.json
+++ b/swadeshproject/package.json
@@ -11,6 +11,8 @@
     "prettier": "prettier --write \"{,!(node_modules)/**/}*.js\""
   },
   "dependencies": {
+    "@react-native-firebase/app": "^15.4.0",
+    "@react-native-firebase/database": "^15.4.0",
     "@react-navigation/native": "^6.0.12",
     "@react-navigation/native-stack": "^6.8.0",
     "react": "18.1.0",
